Version 1.1.0 - ??? 2000

* save image dialog and image-formats API have changed

* Navigation window added